Fix missing '&' attributes

--- a/src/tests/config/test.conf
+++ b/src/tests/config/test.conf
@@ -29,7 +29,7 @@ policy {
 	files.authorize {
 		if (User-Name == "bob") {
 			update control {
-				Cleartext-Password := "bob"
+				&Cleartext-Password := "bob"
 			}
 		}
 	}
@@ -58,7 +58,7 @@ server test {
 
 authorize {
 	update reply {
-		Test-Server-Port = "%{Packet-Dst-Port}"
+		&Test-Server-Port = "%{Packet-Dst-Port}"
 	}
 
 	if (User-Name == "bob") {
@@ -67,30 +67,30 @@ authorize {
 		#  Or, a hashed version thereof.
 		#
 		if (Digest-Response) {
-			if ("%{Test-Number}" == "1") {
+			if (&Test-Number == "1") {
 				update control {
-					Cleartext-Password := "zanzibar"
+					&Cleartext-Password := "zanzibar"
 				}
 			}
 			elsif (Test-Number == "2") {
 				update control {
-					Digest-HA1 := 12af60467a33e8518da5c68bbff12b11
+					&Digest-HA1 := 12af60467a33e8518da5c68bbff12b11
 				}
 			}
 		}	
 		else {
 			update control {
-				Cleartext-Password := "bob"
+				&Cleartext-Password := "bob"
 			}
 		}
 	}
 
 	if (User-Name =~ /^(.*)@test\.example\.com$/) {
 		update request {
-			Stripped-User-Name := "%{1}"
+			&Stripped-User-Name := "%{1}"
 		}
 		update control {
-			Proxy-To-Realm := test.example.com
+			&Proxy-To-Realm := test.example.com
 		}
 	}
 
