Use common submodule CONF_PARSER code for loading submodules

--- a/src/tests/modules/cache_redis/module.conf
+++ b/src/tests/modules/cache_redis/module.conf
@@ -1,6 +1,6 @@
 # Used by cache-logic
 cache {
-	driver = "rlm_cache_redis"
+	driver = "redis"
 
 	redis {
 		server = $ENV{CACHE_REDIS_TEST_SERVER}:30001
@@ -24,7 +24,7 @@ cache {
 }
 
 cache cache_update {
-	driver = "rlm_cache_redis"
+	driver = "redis"
 
 	redis {
 		server = $ENV{CACHE_REDIS_TEST_SERVER}:30001
@@ -74,7 +74,7 @@ cache cache_update {
 #  Test some exotic keys
 #
 cache cache_bin_key_octets {
-	driver = "rlm_cache_redis"
+	driver = "redis"
 
 	redis {
 		server = $ENV{CACHE_REDIS_TEST_SERVER}:30001
@@ -94,7 +94,7 @@ cache cache_bin_key_octets {
 }
 
 cache cache_bin_key_ipaddr {
-	driver = "rlm_cache_redis"
+	driver = "redis"
 
 	redis {
 		server = $ENV{CACHE_REDIS_TEST_SERVER}:30001
