--- a/src/tests/modules/cache_rbtree/module.conf
+++ b/src/tests/modules/cache_rbtree/module.conf
@@ -1,6 +1,6 @@
 # Used by cache-logic
 cache {
-	driver = "rlm_cache_rbtree"
+	driver = "rbtree"
 
 	key = "%{Tmp-String-0}"
 	ttl = 2
@@ -15,7 +15,7 @@ cache {
 }
 
 cache cache_update {
-	driver = "rlm_cache_rbtree"
+	driver = "rbtree"
 
 	key = "%{Tmp-String-0}"
 	ttl = 2
@@ -56,7 +56,7 @@ cache cache_update {
 #  Test some exotic keys
 #
 cache cache_bin_key_octets {
-	driver = "rlm_cache_rbtree"
+	driver = "rbtree"
 
 	key = &Tmp-Octets-0
 	ttl = 2
@@ -67,7 +67,7 @@ cache cache_bin_key_octets {
 }
 
 cache cache_bin_key_ipaddr {
-	driver = "rlm_cache_rbtree"
+	driver = "rbtree"
 
 	key = &Tmp-IP-Address-0
 	ttl = 2
