Correct sqlippool queries for MS SQL Server

--- a/raddb/mods-config/sql/ippool/mssql/queries.conf
+++ b/raddb/mods-config/sql/ippool/mssql/queries.conf
@@ -36,7 +36,6 @@ allocate_existing = "\
 	SET \
 		CallingStationId = '%{Calling-Station-Id}', \
 		UserName = '%{User-Name}', expiry_time = DATEADD(SECOND,${lease_duration},CURRENT_TIMESTAMP) \
-	SET FramedIPAddress = FramedIPAddress \
 	OUTPUT INSERTED.FramedIPAddress"
 
 #
@@ -46,12 +45,12 @@ allocate_find = "\
 	WITH cte AS ( \
 		SELECT TOP(1) FramedIPAddress, NASIPAddress, pool_key, \
 			CallingStationId, UserName, expiry_time \
-		FROM ${ippool_table} \
+		FROM ${ippool_table} WITH (xlock rowlock readpast) \
 		WHERE pool_name = '%{control:${pool_name}}' \
 		AND expiry_time < CURRENT_TIMESTAMP \
 		ORDER BY expiry_time \
 	) \
-	UPDATE cte WITH (rowlock, readpast) \
+	UPDATE cte \
 	SET \
 		NASIPAddress = '%{NAS-IP-Address}', pool_key = '${pool_key}', \
 		CallingStationId = '%{Calling-Station-Id}', \
