--- a/.github/workflows/ci-deb.yml
+++ b/.github/workflows/ci-deb.yml
@@ -78,11 +78,12 @@ jobs:
 
     steps:
 
-    - name: Package manager performance improvements
+    - name: Package manager performance and stability improvements
       run: |
         sed -i 's/deb.debian.org/debian-archive.trafficmanager.net/' /etc/apt/sources.list
         sed -i 's/archive.ubuntu.com/azure.archive.ubuntu.com/' /etc/apt/sources.list
-        echo force-unsafe-io > /etc/dpkg/dpkg.cfg.d/02speedup
+        echo 'APT::Acquire::Retries "3";' > /etc/apt/apt.conf.d/80-retries
+        echo 'force-unsafe-io' > /etc/dpkg/dpkg.cfg.d/02speedup
         echo 'man-db man-db/auto-update boolean false' | debconf-set-selections
         apt-get update
 
