Fix MS SQL accounting queries
Don't try to insert data into a column which isn't in the table

--- a/raddb/mods-config/sql/main/mssql/queries.conf
+++ b/raddb/mods-config/sql/main/mssql/queries.conf
@@ -277,8 +277,7 @@ accounting {
 					FramedInterfaceId, \
 					DelegatedIPv6Prefix, \
 					AcctStartDelay, \
-					AcctStopDelay, \
-					XAscendSessionSvrKey \
+					AcctStopDelay \
 					${....class.column_name}) \
 				VALUES(\
 					'%{Acct-Session-Id}', \
@@ -306,8 +305,7 @@ accounting {
 					'%{Framed-Interface-Id}', \
 					'%{Delegated-IPv6-Prefix}', \
 					'%{Acct-Delay-Time}', \
-					'0', \
-					'%{X-Ascend-Session-Svr-Key}' \
+					'0' \
 					${....class.packet_xlat})"
 
 			#
@@ -385,8 +383,7 @@ accounting {
 					FramedIPv6Prefix, \
 					FramedInterfaceId, \
 					DelegatedIPv6Prefix, \
-					AcctStartDelay, \
-					XAscendSessionSvrKey \
+					AcctStartDelay \
 					${....class.column_name}) \
 				VALUES(\
 					'%{Acct-Session-Id}', \
@@ -410,8 +407,7 @@ accounting {
 					'%{Framed-IPv6-Prefix}', \
 					'%{Framed-Interface-Id}', \
 					'%{Delegated-IPv6-Prefix}', \
-					'0', \
-					'%{X-Ascend-Session-Svr-Key}' \
+					'0' \
 					${....class.packet_xlat})"
 
 			#
