Correct errors in MS SQL accounting queries

--- a/raddb/mods-config/sql/main/mssql/queries.conf
+++ b/raddb/mods-config/sql/main/mssql/queries.conf
@@ -190,7 +190,7 @@ accounting {
 					UserName, \
 					Realm, \
 					NASIPAddress, \
-					NASPort, \
+					NASPortId, \
 					NASPortType, \
 					AcctStartTime, \
 					AcctSessionTime, \
@@ -257,7 +257,7 @@ accounting {
 					UserName, \
 					Realm, \
 					NASIPAddress, \
-					NASPort, \
+					NASPortId, \
 					NASPortType, \
 					AcctStartTime, \
 					AcctSessionTime, \
@@ -367,7 +367,7 @@ accounting {
 					UserName, \
 					Realm, \
 					NASIPAddress, \
-					NASPort, \
+					NASPortId, \
 					NASPortType, \
 					AcctSessionTime, \
 					AcctAuthentic, \
@@ -463,7 +463,7 @@ accounting {
 					UserName, \
 					Realm, \
 					NASIPAddress, \
-					NASPort, \
+					NASPortID, \
 					NASPortType, \
 					AcctStopTime, \
 					AcctSessionTime, \
@@ -498,7 +498,6 @@ accounting {
 					'%{Acct-Authentic}', \
 					'', \
 					'%{Connect-Info}', \
-					NULL, \
 					convert(bigint, '%{%{Acct-Input-Gigawords}:-0}' * POWER(2.0, 32)) | '%{%{Acct-Input-Octets}:-0}', \
 					convert(bigint, '%{%{Acct-Output-Gigawords}:-0}' * POWER(2.0, 32)) | '%{%{Acct-Output-Octets}:-0}', \
 					'%{Called-Station-Id}', \
