--- a/raddb/mods-config/sql/main/mssql/queries.conf
+++ b/raddb/mods-config/sql/main/mssql/queries.conf
@@ -222,6 +222,11 @@ accounting {
 			query = "\
 				UPDATE ${....acct_table1} \
 				SET \
+					AcctInterval = DATEDIFF(second, CASE WHEN AcctUpdateTime > 0 THEN AcctUpdateTime ELSE AcctStartTime END, ${....event_timestamp}), \
+					AcctUpdateTime = ${....event_timestamp}, \
+					AcctSessionTime = '%{Acct-Session-Time}', \
+					AcctInputOctets = convert(bigint, '%{%{Acct-Input-Gigawords}:-0}' * POWER(2.0, 32)) | '%{%{Acct-Input-Octets}:-0}', \
+					AcctOutputOctets = convert(bigint, '%{%{Acct-Output-Gigawords}:-0}' * POWER(2.0, 32)) | '%{%{Acct-Output-Octets}:-0}', \
 					FramedIPAddress = '%{Framed-IP-Address}', \
 					FramedIPv6Address = '%{Framed-IPv6-Address}', \
 					FramedIPv6Prefix = '%{Framed-IPv6-Prefix}', \
@@ -240,6 +245,8 @@ accounting {
 					NASIPAddress, \
 					NASPortId, \
 					NASPortType, \
+					AcctStartTime, \
+					AcctUpdateTime, \
 					AcctSessionTime, \
 					AcctAuthentic, \
 					ConnectInfo_start, \
@@ -264,6 +271,8 @@ accounting {
 					'%{NAS-IP-Address}', \
 					'%{%{NAS-Port-ID}:-%{NAS-Port}}', \
 					'%{NAS-Port-Type}', \
+					${....event_timestamp}, \
+					${....event_timestamp}, \
 					'%{Acct-Session-Time}', \
 					'%{Acct-Authentic}', \
 					'', \
