--- a/raddb/templates.conf
+++ b/raddb/templates.conf
@@ -8,7 +8,7 @@
 #
 #  Version 2.0 has a useful new feature called "templates".
 #
-#  Use templates by adding a line in radiusd.conf:
+#  Use templates by uncommenting the line in radiusd.conf:
 #
 #	$INCLUDE templates.conf
 #
@@ -76,12 +76,17 @@ templates {
 
 	#  Then, each "home_server" section in "proxy.conf" would
 	#  only list the IP address of that home server, and a
-	#  line saying
+	#  line including the template:
 	#
+	#
+	#	home_server foo {
+	#		ipaddr = 192.0.2.10
 	#		$template example_com
+	#	}
 	#
-	#  That would tell FreeRADIUS to look in the section below
-	#  for the rest of the configuration items.
+	#  That would tell FreeRADIUS to look in the "example.com"
+	#  section here for the rest of the "home_server"
+	#  configuration items.
 	#
 	#  For various reasons, you shouldn't have a "." in the template
 	#  name.  Doing so means that the server will be unable to find
