Switch the compiler used for coverity builds

--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -63,9 +63,10 @@ jobs:
 
       - name: Build with Coverity
         run: |
+          export CC=clang
           export PATH=`pwd`/coverity_tool/bin:$PATH
           ./configure -with-rlm-python-bin=/usr/bin/python2.7
-          cov-configure --comptype gcc --compiler cc1 --template
+          cov-configure --template --compiler clang --comptype clangcc
           cov-build --dir cov-int make
 
       - name: Display build result
