--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -265,7 +265,7 @@ jobs:
             --with-threads=$LIBS_OPTIONAL \
             --with-udpfromto=$LIBS_OPTIONAL \
             --with-openssl=$LIBS_OPTIONAL \
-            --with-pcre=$LIBS_OPTIONAL \
+            --with-pcre=$LIBS_OPTIONAL
         echo "config.log"
         cat config.log
         echo "Contents of src/include/autoconf.h"
