--- a/src/tests/modules/sql_sqlite/module.conf
+++ b/src/tests/modules/sql_sqlite/module.conf
@@ -3,7 +3,7 @@ sql {
 	dialect = "sqlite"
 	sqlite {
 		# Path to the sqlite database
-		filename = "$ENV{MODULE_TEST_DIR}/sql_sqlite/rlm_sql_sqlite.db"
+		filename = "$ENV{MODULE_TEST_DIR}/sql_sqlite/$ENV{MODULE_TEST_UNLANG}/rlm_sql_sqlite.db"
 
 		# If the file above does not exist and bootstrap is set
 		# a new database file will be created, and the SQL statements
