Horrible hacks to get EAPOL tests to run in parallel

--- a/src/tests/eapol_test/config/servers.conf
+++ b/src/tests/eapol_test/config/servers.conf
@@ -58,7 +58,7 @@ modules {
 	#  Include the modules which are enabled for this particular
 	#  test.
 	#
-	$-INCLUDE ${testdir}/config/$ENV{METHOD}/mods-enabled/
+	$-INCLUDE ${testdir}/config/$ENV{TEST}/mods-enabled/
 
 	eap {
 		#
@@ -99,7 +99,7 @@ modules {
 		#
 		#  This method MUST exist because we're running it.
 		#
-		$INCLUDE ${testdir}/config/$ENV{METHOD}/methods-enabled/$ENV{METHOD}
+		$INCLUDE ${testdir}/config/$ENV{TEST}/methods-enabled/$ENV{TEST}
 	}
 
 }
@@ -165,6 +165,6 @@ server test {
 }
 
 #
-#  Some methods don't have a sites-enabld.  Tho arguably they should.
+#  Some methods don't have a sites-enabled.  Tho arguably they should.
 #
-$-INCLUDE ${testdir}/config/$ENV{METHOD}/sites-enabled/$ENV{METHOD}
+$-INCLUDE ${testdir}/config/$ENV{TEST}/sites-enabled/$ENV{TEST}
